[tool.poetry]
name = "gt-guild-app"
version = "0.1.0"
description = ""
authors = ["vincentvanderlinden <vlinden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.53.1"
pandas = "<3"
pyarrow = "^23.0.0"
requests = "^2.31.0"
starlette = "^0.52.1"
uvicorn = "^0.40.0"
itsdangerous = "^2.2.0"
websockets = "^16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
